# syn-dial-project

./: .gitignore  CLAUDE.md  NOTES.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: bench.md
autoregressive_models/: downstream_job.sbatch  dspy_demo.py  run_autoregressive_inference.sh  run_downstream.py  run_inference.py  run_inference.sh
autoregressive_models/results/: Meta-Llama-3.1-8B-Instruct-downstream.2857457.err  Meta-Llama-3.1-8B-Instruct-downstream.2857457.out  Meta-Llama-3.1-8B-Instruct_clinicalnlp_taskB_test1_full.jsonl
autoregressive_models/results/Qwen3.5-27B/: Qwen3.5-27B-downstream.3159944.out  Qwen3.5-27B_clinicalnlp_taskB_test1_full.jsonl
autoregressive_models/results/gemma-4-26B-A4B-it/: gemma-4-26B-A4B-it-downstream.3159696.err  gemma-4-26B-A4B-it-downstream.3159696.out
diffusion_models/: diffusion_inference.py  diffusion_inference.sbatch  dream_test.py  run_diffusion_downstream.py  run_diffusion_inference.sh  run_dream_downstream.py  run_llada_inference.sh
diffusion_models/results/: Dream-v0-Instruct-7B_clinicalnlp_taskB_test1_full.jsonl  LLaDA2.1-mini-downstream.2918942.err  LLaDA2.1-mini-downstream.2919265.err  LLaDA2.1-mini-downstream.2919265.out  LLaDA2.1-mini-downstream.3039779.err  LLaDA2.1-mini-downstream.3039779.out  LLaDA2.1-mini_clinicalnlp_taskB_test1_full.jsonl  diffusion-downstream-dream.3049519.err
eval/: analyze_seq_lengths.py  finetune.py  finetune.sbatch  run_finetune.sh
eval/benchmarking/: compute_majority_vote.py  compute_majority_vote_relative.py  run_benchmarking.py  run_benchmarking.sbatch  run_benchmarking.sh  run_majority_vote.sbatch  run_majority_vote_relative.sbatch  run_pairwise_all.sh
eval/utils/: constants.py  dataset.py
prismatic-synthesis/: .gitignore  PIPELINE_SPEC.md  README.md  plot_clusters.py  prepare_medsynth_data.py  requirements.txt  run_pipeline.sh  select_diverse_subset.py  select_diverse_subset.sbatch
prismatic-synthesis/g-vendi/: collect_gradients.py  gradient_computer.py
prismatic-synthesis/prismatic-synthesis/: cluster_filter.py  collect_gradients.py  generate_problem.py  generate_solution.py
prismatic-synthesis/results/: selected_subset_N1000_K100_metadata.json  selected_subset_N1000_metadata.json
(+19 files in other folders)
