[project]
name = "syn-dial-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcc==0.29.1",
    "beautifulsoup4==4.12.3",
    "bert-score",
    "blessed==1.20.0",
    "blinker==1.7.0",
    "boto3==1.34.46",
    "botocore==1.34.46",
    "certifi==2023.11.17",
    "chardet==5.2.0",
    "command-not-found==0.3",
    "contextlib2==21.6.0",
    "coverage==7.4.4",
    "cryptography==41.0.7",
    "cssselect==1.2.0",
    "dbus-python==1.3.2",
    "decorator==5.1.1",
    "distro==1.9.0",
    "distro-info==1.7+build1",
    "entrypoints==0.4",
    "fail2ban==1.0.2",
    "fast-jl",
    "gpustat==1.1.1",
    "html5lib==1.1",
    "httplib2==0.20.4",
    "idna==3.6",
    "importlib-metadata==4.12.0",
    "ipdb",
    "jaraco-classes==3.2.1",
    "jeepney==0.8.0",
    "jmespath==1.0.1",
    "keyring==24.3.1",
    "launchpadlib==1.11.0",
    "lazr-restfulclient==0.14.6",
    "lazr-uri==1.0.6",
    "lxml==5.2.1",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "more-itertools==10.2.0",
    "netaddr==0.8.0",
    "ntpsec==1.2.2",
    "nvidia-ml-py==12.535.133",
    "oauthlib==3.2.2",
    "packaging==24.0",
    "pandas",
    "pexpect==4.9.0",
    "prettytable==3.6.0",
    "prometheus-client==0.19.0",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pyasyncore==1.0.2",
    "pygments==2.17.2",
    "pygobject==3.48.2",
    "pyinotify==0.9.6",
    "pyjwt==2.7.0",
    "pyopenssl==23.2.0",
    "pyparsing==3.1.1",
    "python-apt==2.7.7+ubuntu4",
    "python-dateutil==2.8.2",
    "python-debian==0.1.49+ubuntu2",
    "python-ldap==3.4.4",
    "python-magic==0.4.27",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "rich==13.7.1",
    "s3transfer==0.10.1",
    "secretstorage==3.3.3",
    "setuptools==68.1.2",
    "six==1.16.0",
    "sos==4.8.2",
    "soupsieve==2.5",
    "ssh-import-id==5.11",
    "systemd-python==235",
    "traker[fast]",
    "ubuntu-pro-client==8001",
    "ufw==0.36.2",
    "unattended-upgrades==0.1",
    "urllib3==2.0.7",
    "wadllib==1.3.6",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "wheel==0.42.0",
    "zipp==1.0.0",
    "zstandard==0.22.0",
]
